Converted initial frontend to React

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,12 +14,7 @@
 </head>
 
 <body>
-    <script src="js/scripts.js" defer></script>
-    <link href="css/style.css" rel="stylesheet">
-    <h1>Welcome to Memory Game!</h1>
-    <div id='loginForm'>
-        <h2>Login</h2>
-        <button id="gitBtn">Sign in with GitHub</button>
-    </div>
+    <div id="loginapp"></div>
+    <script type="module" src="js/login.js" defer></script>
 </body>
 </html>
